[gd_scene load_steps=41 format=2]

[ext_resource path="res://HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://HUD/trapeze1.png" type="Texture" id=2]
[ext_resource path="res://fonts/LuckiestGuy.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://items/starsCustom.png" type="Texture" id=4]
[ext_resource path="res://items/magicRod1.png" type="Texture" id=5]
[ext_resource path="res://items/grimoire.png" type="Texture" id=6]
[ext_resource path="res://HUD/menucustomv2.png" type="Texture" id=7]
[ext_resource path="res://HUD/menu custom.png" type="Texture" id=8]
[ext_resource path="res://data/DialogBox.tscn" type="PackedScene" id=9]
[ext_resource path="res://data/DialogCaramel.tscn" type="PackedScene" id=10]
[ext_resource path="res://HUD/popupmenuBGv1.png" type="Texture" id=11]
[ext_resource path="res://HUD/popupmenuCornerv1.png" type="Texture" id=12]
[ext_resource path="res://HUD/Asset 40flat_@2x.png" type="Texture" id=13]
[ext_resource path="res://HUD/Asset 43flat_@2x.png" type="Texture" id=14]
[ext_resource path="res://HUD/audio.gd" type="Script" id=15]
[ext_resource path="res://HUD/Asset 35flat_@2x.png" type="Texture" id=16]
[ext_resource path="res://HUD/Asset 36flat_@2x.png" type="Texture" id=17]
[ext_resource path="res://HUD/customFull.png" type="Texture" id=18]
[ext_resource path="res://HUD/Asset 55flat_@2x.png" type="Texture" id=19]
[ext_resource path="res://areas/fadeIn.tscn" type="PackedScene" id=20]
[ext_resource path="res://fonts/Renner_ 400 Book.ttf" type="DynamicFontData" id=21]
[ext_resource path="res://HUD/right-arrow-96.png" type="Texture" id=22]

[sub_resource type="DynamicFont" id=1]
size = 21
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 3 )

[sub_resource type="CircleShape2D" id=3]
radius = 49.6384

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="DynamicFont" id=11]
size = 30
extra_spacing_top = 14
extra_spacing_bottom = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 20
extra_spacing_top = 6
font_data = ExtResource( 21 )

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="DynamicFont" id=15]
size = 30
extra_spacing_top = 14
extra_spacing_bottom = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=16]
size = 22
extra_spacing_top = 6
font_data = ExtResource( 21 )

[sub_resource type="StreamTexture" id=17]
flags = 4
load_path = "res://.import/right-arrow-96.png-0761a3bca41994699ceed2c863e36e5f.stex"

[sub_resource type="StyleBoxEmpty" id=18]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HUDMC" type="MarginContainer" parent="."]
margin_right = 705.0
margin_bottom = 92.0
size_flags_horizontal = 3

[node name="MainC" type="HBoxContainer" parent="HUDMC"]
editor/display_folded = true
margin_right = 705.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="H1" type="HBoxContainer" parent="HUDMC/MainC"]
margin_right = 114.0
margin_bottom = 92.0
size_flags_horizontal = 3
alignment = 1

[node name="bgcpt1" type="Sprite" parent="HUDMC/MainC/H1"]
modulate = Color( 1, 1, 1, 0.572549 )
position = Vector2( 74.8801, 43.1433 )
scale = Vector2( 0.596274, 0.644224 )
texture = ExtResource( 2 )

[node name="Etoilelabel" type="Label" parent="HUDMC/MainC/H1"]
margin_left = 39.0
margin_top = 35.0
margin_right = 74.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "0/5"

[node name="Spriteetoile" type="Sprite" parent="HUDMC/MainC/H1"]
position = Vector2( 103.82, 40.8392 )
scale = Vector2( 0.363395, 0.363054 )
texture = ExtResource( 4 )

[node name="H2" type="HBoxContainer" parent="HUDMC/MainC"]
margin_left = 118.0
margin_right = 232.0
margin_bottom = 92.0
size_flags_horizontal = 3
alignment = 1

[node name="bgcpt2" type="Sprite" parent="HUDMC/MainC/H2"]
modulate = Color( 1, 1, 1, 0.572549 )
position = Vector2( 73.8917, 43.1433 )
scale = Vector2( 0.561357, 0.644224 )
texture = ExtResource( 2 )

[node name="Baguettelabel" type="Label" parent="HUDMC/MainC/H2"]
margin_left = 41.0
margin_top = 35.0
margin_right = 73.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 2 )
text = "0/1"
valign = 1

[node name="Spritebaguette" type="Sprite" parent="HUDMC/MainC/H2"]
position = Vector2( 98.6887, 36.9266 )
scale = Vector2( 0.811117, 0.811117 )
texture = ExtResource( 5 )

[node name="H3" type="HBoxContainer" parent="HUDMC/MainC"]
margin_left = 236.0
margin_right = 350.0
margin_bottom = 92.0
size_flags_horizontal = 3
alignment = 1

[node name="bgcpt3" type="Sprite" parent="HUDMC/MainC/H3"]
modulate = Color( 1, 1, 1, 0.572549 )
position = Vector2( 72.5141, 43.1432 )
scale = Vector2( 0.543898, 0.644224 )
texture = ExtResource( 2 )

[node name="Codexlabel" type="Label" parent="HUDMC/MainC/H3"]
margin_left = 41.0
margin_top = 35.0
margin_right = 73.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "0/1"

[node name="Spritecodex" type="Sprite" parent="HUDMC/MainC/H3"]
position = Vector2( 112.859, 40.8611 )
scale = Vector2( 0.173638, 0.163409 )
texture = ExtResource( 6 )

[node name="H4" type="HBoxContainer" parent="HUDMC/MainC"]
margin_left = 354.0
margin_right = 468.0
margin_bottom = 92.0
size_flags_horizontal = 3

[node name="H5" type="HBoxContainer" parent="HUDMC/MainC"]
margin_left = 472.0
margin_right = 586.0
margin_bottom = 92.0
size_flags_horizontal = 3

[node name="menu" type="HBoxContainer" parent="HUDMC/MainC"]
margin_left = 590.0
margin_right = 705.0
margin_bottom = 92.0
size_flags_horizontal = 3
alignment = 1

[node name="Spritemenu" type="Sprite" parent="HUDMC/MainC/menu"]
position = Vector2( 77.8447, 37.202 )
scale = Vector2( 0.511746, 0.48921 )
texture = ExtResource( 7 )

[node name="Area2D" type="Area2D" parent="HUDMC/MainC/menu/Spritemenu"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HUDMC/MainC/menu/Spritemenu/Area2D"]
shape = SubResource( 3 )

[node name="Buttonopenmenu" type="Button" parent="HUDMC/MainC/menu/Spritemenu"]
margin_left = -59.335
margin_top = -57.2732
margin_right = 57.665
margin_bottom = 57.7268
flat = true

[node name="TextureRect" type="TextureRect" parent="HUDMC/MainC/menu"]
visible = false
margin_left = 5.0
margin_right = 110.0
margin_bottom = 109.0
texture = ExtResource( 8 )
stretch_mode = 4

[node name="DialogBox" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( 235.939, 21.1539 )
scale = Vector2( 0.404055, 0.82444 )
polygon = PoolVector2Array( 653.527, 313.966, 653.527, 398.872, 10.0497, 398.872, 10.0497, 313.966 )

[node name="DialogCaramel" parent="." instance=ExtResource( 10 )]
visible = false

[node name="POPUPMC" type="MarginContainer" parent="."]
visible = false
margin_left = 151.621
margin_top = 116.217
margin_right = 551.621
margin_bottom = 316.217

[node name="NinePatchRect" type="NinePatchRect" parent="POPUPMC"]
modulate = Color( 1, 1, 0.988235, 0.803922 )
margin_right = 399.0
margin_bottom = 200.0
size_flags_horizontal = 3
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="border" type="Sprite" parent="POPUPMC"]
position = Vector2( 198.919, 100.54 )
scale = Vector2( 0.831354, 0.995088 )
texture = ExtResource( 12 )

[node name="objective" type="Sprite" parent="POPUPMC"]
position = Vector2( 154.271, 61.6309 )
scale = Vector2( 0.611328, 0.603037 )
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="POPUPMC/objective"]
margin_left = -59.4627
margin_top = -77.2193
margin_right = 61.5373
margin_bottom = -51.2193
custom_fonts/font = SubResource( 4 )
text = "OBJECTIVE"
align = 1
valign = 1

[node name="Buttonobj" type="Button" parent="POPUPMC/objective"]
margin_left = -57.0
margin_top = -52.0
margin_right = 55.0
margin_bottom = 51.0
custom_styles/focus = SubResource( 5 )
icon = ExtResource( 13 )
flat = true

[node name="audioHUD" type="Sprite" parent="POPUPMC"]
position = Vector2( 100.675, 144.276 )
scale = Vector2( 0.635349, 0.635971 )
texture = ExtResource( 14 )
script = ExtResource( 15 )

[node name="Label2" type="Label" parent="POPUPMC/audioHUD"]
margin_left = -60.0
margin_top = -79.0
margin_right = 64.0
margin_bottom = -47.0
custom_fonts/font = SubResource( 4 )
text = "Audio"
align = 1
valign = 1

[node name="Buttonaudio" type="Button" parent="POPUPMC/audioHUD"]
margin_left = -58.0884
margin_top = -51.9568
margin_right = 55.9116
margin_bottom = 51.0432
custom_styles/focus = SubResource( 6 )
flat = true

[node name="reset" type="Sprite" parent="POPUPMC"]
position = Vector2( 255.942, 61.1415 )
scale = Vector2( 0.559485, 0.54233 )
texture = ExtResource( 16 )

[node name="Label3" type="Label" parent="POPUPMC/reset"]
margin_left = -54.5797
margin_top = -85.6743
margin_right = 66.4203
margin_bottom = -59.6743
custom_fonts/font = SubResource( 4 )
text = "RESET"
align = 1
valign = 1

[node name="Buttonreset" type="Button" parent="POPUPMC/reset"]
margin_left = -61.5573
margin_top = -57.2233
margin_right = 61.4427
margin_bottom = 56.7767
custom_styles/focus = SubResource( 7 )
icon = ExtResource( 16 )
flat = true

[node name="home" type="Sprite" parent="POPUPMC"]
position = Vector2( 302.309, 141.709 )
scale = Vector2( 0.599208, 0.565656 )
__meta__ = {
"_edit_group_": true
}

[node name="Label4" type="Label" parent="POPUPMC/home"]
margin_left = -78.95
margin_top = -91.383
margin_right = 67.05
margin_bottom = -55.383
custom_fonts/font = SubResource( 4 )
text = "HOME"
align = 1
valign = 1

[node name="Buttonhome" type="Button" parent="POPUPMC/home"]
margin_left = -63.0
margin_top = -56.0
margin_right = 58.0
margin_bottom = 59.0
custom_styles/focus = SubResource( 8 )
icon = ExtResource( 17 )
flat = true

[node name="Window" type="Sprite" parent="POPUPMC"]
visible = false
position = Vector2( 205.91, 142.817 )
scale = Vector2( 0.599208, 0.565656 )
__meta__ = {
"_edit_group_": true
}

[node name="Label5" type="Label" parent="POPUPMC/Window"]
margin_left = -78.95
margin_top = -91.383
margin_right = 67.05
margin_bottom = -55.383
custom_fonts/font = SubResource( 4 )
text = "window"
align = 1
valign = 1
uppercase = true

[node name="Buttonwindow" type="Button" parent="POPUPMC/Window"]
margin_left = -63.0
margin_top = -56.0
margin_right = 58.0
margin_bottom = 59.0
custom_styles/focus = SubResource( 9 )
icon = ExtResource( 18 )
flat = true

[node name="close" type="Sprite" parent="POPUPMC"]
position = Vector2( 355.017, 8.62626 )
scale = Vector2( 0.453169, 0.453169 )
texture = ExtResource( 19 )

[node name="Buttonclose" type="Button" parent="POPUPMC/close"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -52.0
margin_top = -54.5
margin_right = -52.0
margin_bottom = -54.5
custom_styles/focus = SubResource( 10 )
flat = true

[node name="fadeIn" parent="." instance=ExtResource( 20 )]
visible = false

[node name="POPUPBG" type="MarginContainer" parent="."]
editor/display_folded = true
visible = false
margin_left = 114.0
margin_top = 80.0
margin_right = 590.0
margin_bottom = 350.0

[node name="ColorRect" type="ColorRect" parent="POPUPBG"]
margin_right = 476.0
margin_bottom = 270.0

[node name="POPUPRULES" type="MarginContainer" parent="."]
editor/display_folded = true
visible = false
margin_left = 121.136
margin_top = 87.864
margin_right = 583.136
margin_bottom = 342.864

[node name="ColorRect2" type="ColorRect" parent="POPUPRULES"]
margin_right = 462.0
margin_bottom = 255.0

[node name="ColorRect" type="ColorRect" parent="POPUPRULES"]
margin_right = 462.0
margin_bottom = 255.0
color = Color( 0.0235294, 0.65098, 0.298039, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="POPUPRULES"]
margin_right = 462.0
margin_bottom = 255.0

[node name="titre" type="Label" parent="POPUPRULES/VBoxContainer"]
margin_right = 462.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color_shadow = Color( 0.305882, 0.305882, 0.305882, 0.831373 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 4
text = "Rules"
align = 1
valign = 1
uppercase = true

[node name="text1" type="Label" parent="POPUPRULES/VBoxContainer"]
margin_top = 59.0
margin_right = 462.0
margin_bottom = 204.0
custom_fonts/font = SubResource( 12 )
text = "Try to find your way through the labyrinth. 
Collect the Stars as much as 
you can but be aware, the enemies
can steal your Stars!"
align = 1

[node name="closeBut" type="Sprite" parent="POPUPRULES"]
position = Vector2( 434.947, 24.7685 )
scale = Vector2( 0.336537, 0.336537 )
texture = ExtResource( 19 )

[node name="closeButRules1" type="Button" parent="POPUPRULES/closeBut"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -52.0
margin_top = -54.5
margin_right = -52.0
margin_bottom = -54.5
custom_styles/focus = SubResource( 13 )
flat = true

[node name="nextBut" type="Sprite" parent="POPUPRULES"]
position = Vector2( 69.3903, 219.504 )
scale = Vector2( 0.703947, 0.725876 )
texture = ExtResource( 22 )
__meta__ = {
"_edit_group_": true
}

[node name="nextButton" type="Button" parent="POPUPRULES/nextBut"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -48.0
margin_right = -48.0
margin_bottom = -48.0
custom_styles/focus = SubResource( 14 )
flat = true

[node name="POPUPRULES2" type="MarginContainer" parent="."]
editor/display_folded = true
visible = false
margin_left = 121.136
margin_top = 87.864
margin_right = 583.136
margin_bottom = 342.864

[node name="ColorRect" type="ColorRect" parent="POPUPRULES2"]
margin_right = 462.0
margin_bottom = 255.0
color = Color( 0.0235294, 0.65098, 0.298039, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="POPUPRULES2"]
margin_right = 462.0
margin_bottom = 255.0

[node name="titre" type="Label" parent="POPUPRULES2/VBoxContainer"]
margin_right = 462.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 15 )
custom_colors/font_color_shadow = Color( 0.305882, 0.305882, 0.305882, 0.831373 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 4
text = "Rules"
align = 1
valign = 1
uppercase = true

[node name="text1" type="Label" parent="POPUPRULES2/VBoxContainer"]
margin_top = 59.0
margin_right = 462.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 16 )
text = "Find the Grimoire and the Magic Wand
to open the portal."
align = 1

[node name="closeBut" type="Sprite" parent="POPUPRULES2"]
position = Vector2( 434.947, 24.7685 )
scale = Vector2( 0.336537, 0.336537 )
texture = ExtResource( 19 )

[node name="closeButRules2" type="Button" parent="POPUPRULES2/closeBut"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -52.0
margin_top = -54.5
margin_right = -52.0
margin_bottom = -54.5
flat = true

[node name="previoustBut" type="Sprite" parent="POPUPRULES2"]
position = Vector2( 36.3159, 218.421 )
scale = Vector2( 0.703947, 0.725876 )
texture = SubResource( 17 )
flip_h = true
__meta__ = {
"_edit_group_": true
}

[node name="prevButton" type="Button" parent="POPUPRULES2/previoustBut"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -48.0
margin_right = -48.0
margin_bottom = -48.0
custom_styles/focus = SubResource( 18 )
flat = true
[connection signal="pressed" from="HUDMC/MainC/menu/Spritemenu/Buttonopenmenu" to="." method="_on_Buttonopenmenu_pressed"]
[connection signal="pressed" from="POPUPMC/objective/Buttonobj" to="." method="_on_Buttonobj_pressed"]
[connection signal="pressed" from="POPUPMC/audioHUD/Buttonaudio" to="POPUPMC/audioHUD" method="_on_Buttonaudio_pressed"]
[connection signal="pressed" from="POPUPMC/audioHUD/Buttonaudio" to="." method="_on_Buttonaudio_pressed"]
[connection signal="pressed" from="POPUPMC/reset/Buttonreset" to="." method="_on_Buttonreset_pressed"]
[connection signal="pressed" from="POPUPMC/home/Buttonhome" to="." method="_on_Buttonhome_pressed"]
[connection signal="pressed" from="POPUPMC/Window/Buttonwindow" to="." method="_on_Buttonwindow_pressed"]
[connection signal="pressed" from="POPUPMC/close/Buttonclose" to="." method="_on_Buttonclose_pressed"]
[connection signal="fadeIn_finished" from="fadeIn" to="." method="_on_fadeIn_fadeIn_finished"]
[connection signal="pressed" from="POPUPRULES/closeBut/closeButRules1" to="." method="_on_closeButRules1_pressed"]
[connection signal="pressed" from="POPUPRULES/nextBut/nextButton" to="." method="_on_nextButton_pressed"]
[connection signal="pressed" from="POPUPRULES2/closeBut/closeButRules2" to="." method="_on_closeButRules2_pressed"]
[connection signal="pressed" from="POPUPRULES2/previoustBut/prevButton" to="." method="_on_prevButton_pressed"]
